// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /api/reference /0afca83a-7b6b-4288-82f6-a59685346617 outputs acknowledgements 1`] = `"We acknowledge ACTRIS and Finnish Meteorological Institute for providing the data set which is available for download from <a href="http://localhost:8080">http://localhost:8080</a>."`;

exports[`GET /api/reference /0afca83a-7b6b-4288-82f6-a59685346617 outputs citation as bibtex 1`] = `
"@misc{clu2020,
  author = {CLU},
  title = {Classification data from New York on 16 July 2009},
  year = {2020},
  url = {http://localhost:8080/file/0afca83a-7b6b-4288-82f6-a59685346617},
  publisher = {ACTRIS Cloud remote sensing data centre unit (CLU)},
  licence = {https://creativecommons.org/licenses/by/4.0/}
}"
`;

exports[`GET /api/reference /0afca83a-7b6b-4288-82f6-a59685346617 outputs citation as html 1`] = `"CLU (2020). Classification data from New York on 16 July 2009. ACTRIS Cloud remote sensing data centre unit (CLU). <a href="http://localhost:8080/file/0afca83a-7b6b-4288-82f6-a59685346617">http://localhost:8080/file/0afca83a-7b6b-4288-82f6-a59685346617</a>"`;

exports[`GET /api/reference /0afca83a-7b6b-4288-82f6-a59685346617 outputs citation as ris 1`] = `
"TY  - DATA
AU  - CLU
T1  - Classification data from New York on 16 July 2009
PY  - 2020
PB  - ACTRIS Cloud remote sensing data centre unit (CLU)
UR  - http://localhost:8080/file/0afca83a-7b6b-4288-82f6-a59685346617
N1  - 
ER  -"
`;

exports[`GET /api/reference /0afca83a-7b6b-4288-82f6-a59685346617 outputs data availability 1`] = `"The data used in this study are generated by the Aerosol, Clouds and Trace Gases Research Infrastructure (ACTRIS) and are available from the ACTRIS Data Centre using the following link: <a href="http://localhost:8080/file/0afca83a-7b6b-4288-82f6-a59685346617">http://localhost:8080/file/0afca83a-7b6b-4288-82f6-a59685346617</a>."`;

exports[`GET /api/reference /1bb32746-faf0-4057-9076-ed2e698dcf36 outputs acknowledgements 1`] = `"We acknowledge ACTRIS and Finnish Meteorological Institute for providing the data set which is available for download from <a href="http://localhost:8080">http://localhost:8080</a>. Bucharest test citation. We acknowledge ECMWF citation text."`;

exports[`GET /api/reference /1bb32746-faf0-4057-9076-ed2e698dcf36 outputs citation as bibtex 1`] = `
"@misc{kirk2020,
  author = {Kirk, James Tiberius and Picard, Jean-Luc and O'Connor, Ewan and Buchareström, Björn and Bucharinen, Benjamin},
  title = {Categorize data from Bucharest on 16 July 2019},
  year = {2020},
  url = {http://localhost:8080/file/1bb32746-faf0-4057-9076-ed2e698dcf36},
  publisher = {ACTRIS Cloud remote sensing data centre unit (CLU)},
  licence = {https://creativecommons.org/licenses/by/4.0/}
}"
`;

exports[`GET /api/reference /1bb32746-faf0-4057-9076-ed2e698dcf36 outputs citation as html 1`] = `"Kirk, J. T., Picard, J.-L., O'Connor, E., Buchareström, B., & Bucharinen, B. (2020). Categorize data from Bucharest on 16 July 2019. ACTRIS Cloud remote sensing data centre unit (CLU). <a href="http://localhost:8080/file/1bb32746-faf0-4057-9076-ed2e698dcf36">http://localhost:8080/file/1bb32746-faf0-4057-9076-ed2e698dcf36</a>"`;

exports[`GET /api/reference /1bb32746-faf0-4057-9076-ed2e698dcf36 outputs citation as ris 1`] = `
"TY  - DATA
AU  - Kirk, James Tiberius
AU  - Picard, Jean-Luc
AU  - O'Connor, Ewan
AU  - Buchareström, Björn
AU  - Bucharinen, Benjamin
T1  - Categorize data from Bucharest on 16 July 2019
PY  - 2020
PB  - ACTRIS Cloud remote sensing data centre unit (CLU)
UR  - http://localhost:8080/file/1bb32746-faf0-4057-9076-ed2e698dcf36
N1  - 
ER  -"
`;

exports[`GET /api/reference /1bb32746-faf0-4057-9076-ed2e698dcf36 outputs data availability 1`] = `"The data used in this study are generated by the Aerosol, Clouds and Trace Gases Research Infrastructure (ACTRIS) and are available from the ACTRIS Data Centre using the following link: <a href="http://localhost:8080/file/1bb32746-faf0-4057-9076-ed2e698dcf36">http://localhost:8080/file/1bb32746-faf0-4057-9076-ed2e698dcf36</a>."`;

exports[`GET /api/reference /2bb32746-faf0-4057-9076-ed2e698dcf36 outputs acknowledgements 1`] = `"We acknowledge ACTRIS and Finnish Meteorological Institute for providing the data set which is available for download from <a href="http://localhost:8080">http://localhost:8080</a>. Bucharest test citation. We acknowledge ECMWF citation text."`;

exports[`GET /api/reference /2bb32746-faf0-4057-9076-ed2e698dcf36 outputs citation as bibtex 1`] = `
"@misc{kirk2020,
  author = {Kirk, James Tiberius and Picard, Jean-Luc and O'Connor, Ewan and Buchareström, Björn and Bucharinen, Benjamin},
  title = {Classification data from Bucharest on 16 July 2019},
  year = {2020},
  url = {http://localhost:8080/file/2bb32746-faf0-4057-9076-ed2e698dcf36},
  publisher = {ACTRIS Cloud remote sensing data centre unit (CLU)},
  licence = {https://creativecommons.org/licenses/by/4.0/}
}"
`;

exports[`GET /api/reference /2bb32746-faf0-4057-9076-ed2e698dcf36 outputs citation as html 1`] = `"Kirk, J. T., Picard, J.-L., O'Connor, E., Buchareström, B., & Bucharinen, B. (2020). Classification data from Bucharest on 16 July 2019. ACTRIS Cloud remote sensing data centre unit (CLU). <a href="http://localhost:8080/file/2bb32746-faf0-4057-9076-ed2e698dcf36">http://localhost:8080/file/2bb32746-faf0-4057-9076-ed2e698dcf36</a>"`;

exports[`GET /api/reference /2bb32746-faf0-4057-9076-ed2e698dcf36 outputs citation as ris 1`] = `
"TY  - DATA
AU  - Kirk, James Tiberius
AU  - Picard, Jean-Luc
AU  - O'Connor, Ewan
AU  - Buchareström, Björn
AU  - Bucharinen, Benjamin
T1  - Classification data from Bucharest on 16 July 2019
PY  - 2020
PB  - ACTRIS Cloud remote sensing data centre unit (CLU)
UR  - http://localhost:8080/file/2bb32746-faf0-4057-9076-ed2e698dcf36
N1  - 
ER  -"
`;

exports[`GET /api/reference /2bb32746-faf0-4057-9076-ed2e698dcf36 outputs data availability 1`] = `"The data used in this study are generated by the Aerosol, Clouds and Trace Gases Research Infrastructure (ACTRIS) and are available from the ACTRIS Data Centre using the following link: <a href="http://localhost:8080/file/2bb32746-faf0-4057-9076-ed2e698dcf36">http://localhost:8080/file/2bb32746-faf0-4057-9076-ed2e698dcf36</a>."`;

exports[`GET /api/reference /6e145ec8-7d66-4a5b-9c5e-c1fdfadafc6b outputs acknowledgements 1`] = `"We acknowledge ACTRIS and Finnish Meteorological Institute for providing the data set which is available for download from <a href="http://localhost:8080">http://localhost:8080</a>."`;

exports[`GET /api/reference /6e145ec8-7d66-4a5b-9c5e-c1fdfadafc6b outputs citation as bibtex 1`] = `
"@misc{clu2020,
  author = {CLU},
  title = {Custom collection of classification data from New York on 16 Jul 2009},
  year = {2020},
  url = {http://localhost:8080/collection/6e145ec8-7d66-4a5b-9c5e-c1fdfadafc6b},
  publisher = {ACTRIS Cloud remote sensing data centre unit (CLU)},
  licence = {https://creativecommons.org/licenses/by/4.0/}
}"
`;

exports[`GET /api/reference /6e145ec8-7d66-4a5b-9c5e-c1fdfadafc6b outputs citation as html 1`] = `"CLU (2020). Custom collection of classification data from New York on 16 Jul 2009. ACTRIS Cloud remote sensing data centre unit (CLU). <a href="http://localhost:8080/collection/6e145ec8-7d66-4a5b-9c5e-c1fdfadafc6b">http://localhost:8080/collection/6e145ec8-7d66-4a5b-9c5e-c1fdfadafc6b</a>"`;

exports[`GET /api/reference /6e145ec8-7d66-4a5b-9c5e-c1fdfadafc6b outputs citation as ris 1`] = `
"TY  - DATA
AU  - CLU
T1  - Custom collection of classification data from New York on 16 Jul 2009
PY  - 2020
PB  - ACTRIS Cloud remote sensing data centre unit (CLU)
UR  - http://localhost:8080/collection/6e145ec8-7d66-4a5b-9c5e-c1fdfadafc6b
N1  - 
ER  -"
`;

exports[`GET /api/reference /6e145ec8-7d66-4a5b-9c5e-c1fdfadafc6b outputs data availability 1`] = `"The data used in this study are generated by the Aerosol, Clouds and Trace Gases Research Infrastructure (ACTRIS) and are available from the ACTRIS Data Centre using the following link: <a href="http://localhost:8080/collection/6e145ec8-7d66-4a5b-9c5e-c1fdfadafc6b">http://localhost:8080/collection/6e145ec8-7d66-4a5b-9c5e-c1fdfadafc6b</a>."`;

exports[`GET /api/reference /7a6c6675-af65-4650-a20c-e061344393d1 outputs acknowledgements 1`] = `"We acknowledge ACTRIS and Finnish Meteorological Institute for providing the data set which is available for download from <a href="http://localhost:8080">http://localhost:8080</a>. Bucharest test citation. We acknowledge ECMWF citation text."`;

exports[`GET /api/reference /7a6c6675-af65-4650-a20c-e061344393d1 outputs citation as bibtex 1`] = `
"@misc{kirk2020,
  author = {Kirk, James Tiberius and Picard, Jean-Luc and O'Connor, Ewan and Buchareström, Björn and Bucharinen, Benjamin},
  title = {Custom collection of classification data from Bucharest on 16 Jul 2019},
  year = {2020},
  url = {http://localhost:8080/collection/7a6c6675-af65-4650-a20c-e061344393d1},
  publisher = {ACTRIS Cloud remote sensing data centre unit (CLU)},
  licence = {https://creativecommons.org/licenses/by/4.0/}
}"
`;

exports[`GET /api/reference /7a6c6675-af65-4650-a20c-e061344393d1 outputs citation as html 1`] = `"Kirk, J. T., Picard, J.-L., O'Connor, E., Buchareström, B., & Bucharinen, B. (2020). Custom collection of classification data from Bucharest on 16 Jul 2019. ACTRIS Cloud remote sensing data centre unit (CLU). <a href="http://localhost:8080/collection/7a6c6675-af65-4650-a20c-e061344393d1">http://localhost:8080/collection/7a6c6675-af65-4650-a20c-e061344393d1</a>"`;

exports[`GET /api/reference /7a6c6675-af65-4650-a20c-e061344393d1 outputs citation as ris 1`] = `
"TY  - DATA
AU  - Kirk, James Tiberius
AU  - Picard, Jean-Luc
AU  - O'Connor, Ewan
AU  - Buchareström, Björn
AU  - Bucharinen, Benjamin
T1  - Custom collection of classification data from Bucharest on 16 Jul 2019
PY  - 2020
PB  - ACTRIS Cloud remote sensing data centre unit (CLU)
UR  - http://localhost:8080/collection/7a6c6675-af65-4650-a20c-e061344393d1
N1  - 
ER  -"
`;

exports[`GET /api/reference /7a6c6675-af65-4650-a20c-e061344393d1 outputs data availability 1`] = `"The data used in this study are generated by the Aerosol, Clouds and Trace Gases Research Infrastructure (ACTRIS) and are available from the ACTRIS Data Centre using the following link: <a href="http://localhost:8080/collection/7a6c6675-af65-4650-a20c-e061344393d1">http://localhost:8080/collection/7a6c6675-af65-4650-a20c-e061344393d1</a>."`;

exports[`GET /api/reference /48092c00-161d-4ca2-a29d-628cf8e960f6 outputs acknowledgements 1`] = `"We acknowledge ACTRIS and Finnish Meteorological Institute for providing the data set which is available for download from <a href="http://localhost:8080">http://localhost:8080</a>. Hyytiälä test citation."`;

exports[`GET /api/reference /48092c00-161d-4ca2-a29d-628cf8e960f6 outputs citation as bibtex 1`] = `
"@misc{clu2020,
  author = {CLU},
  title = {Custom collection of model, and radar data from Hyytiälä, and Mace Head between 5 Dec 2014 and 1 Sep 2019},
  year = {2020},
  url = {http://localhost:8080/collection/48092c00-161d-4ca2-a29d-628cf8e960f6},
  publisher = {ACTRIS Cloud remote sensing data centre unit (CLU)},
  licence = {https://creativecommons.org/licenses/by/4.0/}
}"
`;

exports[`GET /api/reference /48092c00-161d-4ca2-a29d-628cf8e960f6 outputs citation as html 1`] = `"CLU (2020). Custom collection of model, and radar data from Hyytiälä, and Mace Head between 5 Dec 2014 and 1 Sep 2019. ACTRIS Cloud remote sensing data centre unit (CLU). <a href="http://localhost:8080/collection/48092c00-161d-4ca2-a29d-628cf8e960f6">http://localhost:8080/collection/48092c00-161d-4ca2-a29d-628cf8e960f6</a>"`;

exports[`GET /api/reference /48092c00-161d-4ca2-a29d-628cf8e960f6 outputs citation as ris 1`] = `
"TY  - DATA
AU  - CLU
T1  - Custom collection of model, and radar data from Hyytiälä, and Mace Head between 5 Dec 2014 and 1 Sep 2019
PY  - 2020
PB  - ACTRIS Cloud remote sensing data centre unit (CLU)
UR  - http://localhost:8080/collection/48092c00-161d-4ca2-a29d-628cf8e960f6
N1  - 
ER  -"
`;

exports[`GET /api/reference /48092c00-161d-4ca2-a29d-628cf8e960f6 outputs data availability 1`] = `"The data used in this study are generated by the Aerosol, Clouds and Trace Gases Research Infrastructure (ACTRIS) and are available from the ACTRIS Data Centre using the following link: <a href="http://localhost:8080/collection/48092c00-161d-4ca2-a29d-628cf8e960f6">http://localhost:8080/collection/48092c00-161d-4ca2-a29d-628cf8e960f6</a>."`;

exports[`GET /api/reference /a45a2e9a-e39d-4af2-9798-5ea0fadf041e outputs acknowledgements 1`] = `"We acknowledge ACTRIS and Finnish Meteorological Institute for providing the data set which is available for download from <a href="http://localhost:8080">http://localhost:8080</a>. We acknowledge ECMWF citation text."`;

exports[`GET /api/reference /a45a2e9a-e39d-4af2-9798-5ea0fadf041e outputs citation as bibtex 1`] = `
"@misc{o'connor2020,
  author = {O'Connor, Ewan},
  title = {Model data from Bucharest on 16 July 2019},
  year = {2020},
  url = {www.pid.com},
  publisher = {ACTRIS Cloud remote sensing data centre unit (CLU)},
  licence = {https://creativecommons.org/licenses/by/4.0/}
}"
`;

exports[`GET /api/reference /a45a2e9a-e39d-4af2-9798-5ea0fadf041e outputs citation as html 1`] = `"O'Connor, E. (2020). Model data from Bucharest on 16 July 2019. ACTRIS Cloud remote sensing data centre unit (CLU). <a href="www.pid.com">www.pid.com</a>"`;

exports[`GET /api/reference /a45a2e9a-e39d-4af2-9798-5ea0fadf041e outputs citation as ris 1`] = `
"TY  - DATA
AU  - O'Connor, Ewan
T1  - Model data from Bucharest on 16 July 2019
PY  - 2020
PB  - ACTRIS Cloud remote sensing data centre unit (CLU)
UR  - www.pid.com
N1  - 
ER  -"
`;

exports[`GET /api/reference /a45a2e9a-e39d-4af2-9798-5ea0fadf041e outputs data availability 1`] = `"The data used in this study are generated by the Aerosol, Clouds and Trace Gases Research Infrastructure (ACTRIS) and are available from the ACTRIS Data Centre using the following link: <a href="www.pid.com">www.pid.com</a>."`;

exports[`GET /api/reference /b6de8cf4-8825-47b0-aaa9-4fd413bbb0d7 outputs acknowledgements 1`] = `"We acknowledge ACTRIS and Finnish Meteorological Institute for providing the data set which is available for download from <a href="http://localhost:8080">http://localhost:8080</a>. Bucharest test citation."`;

exports[`GET /api/reference /b6de8cf4-8825-47b0-aaa9-4fd413bbb0d7 outputs citation as bibtex 1`] = `
"@misc{picard2020,
  author = {Picard, Jean-Luc and Buchareström, Björn and Bucharinen, Benjamin},
  title = {Lidar data from Bucharest on 16 July 2019},
  year = {2020},
  url = {http://localhost:8080/file/b6de8cf4-8825-47b0-aaa9-4fd413bbb0d7},
  publisher = {ACTRIS Cloud remote sensing data centre unit (CLU)},
  licence = {https://creativecommons.org/licenses/by/4.0/}
}"
`;

exports[`GET /api/reference /b6de8cf4-8825-47b0-aaa9-4fd413bbb0d7 outputs citation as html 1`] = `"Picard, J.-L., Buchareström, B., & Bucharinen, B. (2020). Lidar data from Bucharest on 16 July 2019. ACTRIS Cloud remote sensing data centre unit (CLU). <a href="http://localhost:8080/file/b6de8cf4-8825-47b0-aaa9-4fd413bbb0d7">http://localhost:8080/file/b6de8cf4-8825-47b0-aaa9-4fd413bbb0d7</a>"`;

exports[`GET /api/reference /b6de8cf4-8825-47b0-aaa9-4fd413bbb0d7 outputs citation as ris 1`] = `
"TY  - DATA
AU  - Picard, Jean-Luc
AU  - Buchareström, Björn
AU  - Bucharinen, Benjamin
T1  - Lidar data from Bucharest on 16 July 2019
PY  - 2020
PB  - ACTRIS Cloud remote sensing data centre unit (CLU)
UR  - http://localhost:8080/file/b6de8cf4-8825-47b0-aaa9-4fd413bbb0d7
N1  - 
ER  -"
`;

exports[`GET /api/reference /b6de8cf4-8825-47b0-aaa9-4fd413bbb0d7 outputs data availability 1`] = `"The data used in this study are generated by the Aerosol, Clouds and Trace Gases Research Infrastructure (ACTRIS) and are available from the ACTRIS Data Centre using the following link: <a href="http://localhost:8080/file/b6de8cf4-8825-47b0-aaa9-4fd413bbb0d7">http://localhost:8080/file/b6de8cf4-8825-47b0-aaa9-4fd413bbb0d7</a>."`;

exports[`GET /api/reference /f036da43-c19c-4832-99f9-6cc88f3255c5 outputs acknowledgements 1`] = `"We acknowledge ACTRIS and Finnish Meteorological Institute for providing the data set which is available for download from <a href="http://localhost:8080">http://localhost:8080</a>. Bucharest test citation."`;

exports[`GET /api/reference /f036da43-c19c-4832-99f9-6cc88f3255c5 outputs citation as bibtex 1`] = `
"@misc{kirk2020,
  author = {Kirk, James Tiberius and Buchareström, Björn and Bucharinen, Benjamin},
  title = {Radar data from Bucharest on 16 July 2019},
  year = {2020},
  url = {http://localhost:8080/file/f036da43-c19c-4832-99f9-6cc88f3255c5},
  publisher = {ACTRIS Cloud remote sensing data centre unit (CLU)},
  licence = {https://creativecommons.org/licenses/by/4.0/}
}"
`;

exports[`GET /api/reference /f036da43-c19c-4832-99f9-6cc88f3255c5 outputs citation as html 1`] = `"Kirk, J. T., Buchareström, B., & Bucharinen, B. (2020). Radar data from Bucharest on 16 July 2019. ACTRIS Cloud remote sensing data centre unit (CLU). <a href="http://localhost:8080/file/f036da43-c19c-4832-99f9-6cc88f3255c5">http://localhost:8080/file/f036da43-c19c-4832-99f9-6cc88f3255c5</a>"`;

exports[`GET /api/reference /f036da43-c19c-4832-99f9-6cc88f3255c5 outputs citation as ris 1`] = `
"TY  - DATA
AU  - Kirk, James Tiberius
AU  - Buchareström, Björn
AU  - Bucharinen, Benjamin
T1  - Radar data from Bucharest on 16 July 2019
PY  - 2020
PB  - ACTRIS Cloud remote sensing data centre unit (CLU)
UR  - http://localhost:8080/file/f036da43-c19c-4832-99f9-6cc88f3255c5
N1  - 
ER  -"
`;

exports[`GET /api/reference /f036da43-c19c-4832-99f9-6cc88f3255c5 outputs data availability 1`] = `"The data used in this study are generated by the Aerosol, Clouds and Trace Gases Research Infrastructure (ACTRIS) and are available from the ACTRIS Data Centre using the following link: <a href="http://localhost:8080/file/f036da43-c19c-4832-99f9-6cc88f3255c5">http://localhost:8080/file/f036da43-c19c-4832-99f9-6cc88f3255c5</a>."`;
